web-infras/parser/tests/fixtures/babel/es2015/uncategorised/349/output.txt
[SyntaxError]: property name __proto__ appears more than once in object literal (1,20)
1|({ '__proto__': 1, __proto__: 2 })
 |                  ^
